# CRATE

./: .buildinfo  .flake8  CITATION.cff  CONTRIBUTING.md  CRATE.py  FFTHomogenizationBasicScheme.py  LICENSE  LinksInterface.py  MANIFEST.in  README.md  SCA.py  VTKOutput.py  api.html  clusterInteractionTensors.py  clusteringMethods.py  clusteringQuantities.py  crate.py  errors.py  fileOperations.py  genindex.html  homogenizedResultsOutput.py  index.html  info.py  license.html  objects.inv  onlineStage.py  packager.py  py-modindex.html  readInputData.py  requirements.txt  search.html  searchindex.js  setup.cfg  tensorOperations.py  test_crate.py  utilities.py
.doctrees/: api.doctree  index.doctree  license.doctree
Links/: LinksUtilities.py
_autosummary/: crate.clustering.adaptivity.adaptivity_criterion.ABC.html  crate.clustering.adaptivity.adaptivity_criterion.AdaptiveClusterGrouping.html  crate.clustering.adaptivity.adaptivity_criterion.AdaptivityCriterion.html  crate.clustering.adaptivity.adaptivity_criterion.SpatialDiscontinuities.html  crate.clustering.adaptivity.adaptivity_criterion.abstractmethod.html  crate.clustering.adaptivity.adaptivity_criterion.html  crate.clustering.adaptivity.crve_adaptivity.AdaptiveClusterGrouping.html  crate.clustering.adaptivity.crve_adaptivity.AdaptivityManager.html  crate.clustering.adaptivity.crve_adaptivity.ClusteringAdaptivityOutput.html  crate.clustering.adaptivity.crve_adaptivity.MaterialQuantitiesComputer.html  crate.clustering.adaptivity.crve_adaptivity.SpatialDiscontinuities.html  crate.clustering.adaptivity.crve_adaptivity.cauchy_from_first_piola.html  crate.clustering.adaptivity.crve_adaptivity.compute_spatial_log_strain.html  crate.clustering.adaptivity.crve_adaptivity.html  crate.clustering.adaptivity.html  crate.clustering.citoperations.assemble_cit.html  crate.clustering.citoperations.gop_material_independent_terms.html  crate.clustering.citoperations.html  crate.clustering.citoperations.set_discrete_freqs.html  crate.clustering.clusteringalgs.ABC.html  (+571 more)
(+1572 files in other folders)
