[metadata]
name = crate
version = file: VERSION
author = Bernardo Ferreira
author_email = bernardo_ferreira@brown.edu
description = CRATE: Clustering-based Nonlinear Analysis of Materials
long_description = file: README.md
long_description_content_type = text/markdown
keywords = simulation, clustering, materials, homogenization, modeling
url = https://github.com/BernardoFerreira/CRATE
license = BSD-3-Clause License
license_files = file: LICENSE
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Science/Research
  Topic :: Scientific/Engineering
  Topic :: Scientific/Engineering :: Artificial Intelligence
  Topic :: Scientific/Engineering :: Physics
  License :: OSI Approved :: BSD-3-Clause License
	Natural Language :: English
	Programming Language :: Python :: 3

[options]
package_dir=
  =src
packages=find:
include_package_data = True
python_requires = >=3.6

[options.packages.find]
where=src
